--- a/app/src/main/res/layout/fragment_add_lugar.xml
+++ b/app/src/main/res/layout/fragment_add_lugar.xml
@@ -57,3 +57,4 @@
         android:layout_height="wrap_content"
         android:text="@string/bt_agregar" />
 </LinearLayout>
+<!-- Para que se refleje el cambio-->
