--- a/app/src/main/res/layout/lugar_fila.xml
+++ b/app/src/main/res/layout/lugar_fila.xml
@@ -15,9 +15,10 @@
 
         <TextView
             android:id="@+id/tv_nombre"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/msg_nombre"
+            android:layout_marginTop="16dp"
+            android:text="@string/msg_nombre_add"
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -27,24 +28,23 @@
 
         <ImageView
             android:id="@+id/imagen"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:contentDescription="@string/msg_imagen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
-            tools:ignore="ImageContrastCheck"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tv_correo"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/msg_correo"
+            android:layout_marginTop="28dp"
+            android:text="@string/msg_correo_add"
             android:textAlignment="center"
-            android:textSize="18sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.485"
             app:layout_constraintStart_toEndOf="@+id/imagen"
             app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />
 
@@ -53,11 +53,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/msg_telefono"
+            android:text="@string/msg_telefono_add"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintHorizontal_bias="0.47"
             app:layout_constraintStart_toEndOf="@+id/imagen"
             app:layout_constraintTop_toBottomOf="@+id/tv_correo" />
+
+        <TextView
+            android:id="@+id/tv_web"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/msg_web_add"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintStart_toEndOf="@+id/imagen"
+            app:layout_constraintTop_toBottomOf="@+id/tv_telefono" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
