--- a/app/src/main/res/layout/fragment_update_lugar.xml
+++ b/app/src/main/res/layout/fragment_update_lugar.xml
@@ -97,7 +97,19 @@
                     android:contentDescription="@string/msg_web_view"
                     android:scaleType="fitCenter"
                     android:src="@drawable/web_logo" />
+
+
+              <ImageButton
+                android:id="@+id/btPlay"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:contentDescription="@string/msgEscucharAudio"
+                android:src="@drawable/ic_play" />
+
             </LinearLayout>
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -141,6 +153,16 @@
                     android:src="@drawable/ic_location"
                     tools:ignore="ImageContrastCheck" />
             </LinearLayout>
+
+          <ImageView
+            android:id="@+id/imagen"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:contentDescription="@string/msg_imagen"
+            android:scaleType="centerInside"
+            tools:ignore="ImageContrastCheck"
+            tools:src="@tools:sample/backgrounds/scenic" />
+
 
         </LinearLayout>
     </ScrollView>
