--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,4 +65,10 @@
             android:contentDescription="@string/msg_btLogin"
             app:srcCompat="@drawable/ic_login" />
     </LinearLayout>
+
+  <ImageButton
+    android:id="@+id/btGoogle"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
 </LinearLayout>
